[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2024"

[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow = "1.0.99"
my_lib = { git = "https://github.com/DrFlowerkick/mylib", branch = "main" }
petgraph = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
